# speech-to-text-rust

./: Cargo.toml  README.md
src/: audio_utils.rs  main.rs
whisper-bin/: chunk1.opus  lsp  quantize  test-vad  test-vad-full  vad-speech-segments  wchess  whisper-bench  whisper-cli  whisper-command  whisper-server  whisper-stream  whisper-talk-llama
