[package]
name = "speech-to-text-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.15.3"
futures-util = "0.3.31"
hound = "3.5.1"
reqwest = { version = "0.12.19", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
